--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     </div>
   </nav>
   <main>
+    <div class="background">
+      <h4 id="description">Simple background color change each time you click!<br>
+        ...does this give you ideas for your website?<br>
+        ...what can froggeater.com do for you?</h4>
+    </div>
+    
     <div class= "container">
       <h2>background color : <span class= "color">#f1f5f8</span></h2>
       <button class= "btn btn-hero" id= "btn">Click Me</button>
